liblix_sources += files(
  'common-args.cc',
  'crash-handler.cc',
  'loggers.cc',
  'progress-bar.cc',
  'shared.cc',
  'stack.cc',
)

libmain_headers = files(
  'common-args.hh',
  'crash-handler.hh',
  'loggers.hh',
  'progress-bar.hh',
  'shared.hh',
)

install_headers(libmain_headers, subdir : 'lix/libmain', preserve_path : true)
