[package]
description = "Nix function documentation tool, stripped down into a library"
edition = "2021"
name = "lix-doc"
version = "0.0.1"
license = "BSD-2-Clause OR MIT"
# upstream details
homepage = "https://github.com/lf-/nix-doc"
repository = "https://github.com/lf-/nix-doc"

[dependencies]
rnix = "0.12.0"
# Necessary because rnix fails to export a critical trait (Rowan's AstNode).
rowan = "0.15.16"

[dev-dependencies]
expect-test = "1.1.0"
