[package]
name = "lix"
edition = "2021"

[lib]
name = "lixrs"
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
lix-doc.path = "../lix-doc"
regex.workspace = true
rootcause.workspace=true
rustyline.workspace = true
rustyline-derive.workspace = true

[build-dependencies]
zngur.workspace = true
