[package]
name = "lix"
edition = "2021"

[lib]
name = "lixrs"
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
base64.workspace = true
lix-doc.path = "../lix-doc"
regex.workspace = true
rootcause.workspace=true
rustyline.workspace = true
rustyline-derive.workspace = true
serde.workspace = true
toml.workspace = true

[build-dependencies]
zngur.workspace = true
pkg-config.workspace = true
